# qazna.org

./: .editorconfig  .env  .env.example  .gitignore  .mlc-config.json  .sops.yaml  Dockerfile  Makefile  README.md  buf.gen.yaml  buf.yaml  docker-compose.yml  go.mod  go.sum
.cache/go-build/: trim.txt
.github/workflows/: ci.yml  infra.yml
api/: openapi.yaml
api/spec/: openapi.yaml  spec.go
cmd/aidemo/: main.go
cmd/aiutil/: main.go
cmd/api/: Dockerfile  main.go
cmd/migrate/: main.go
cmd/smoke-ledger/: main.go
core/: Cargo.toml
core/ledger/: Cargo.toml  Dockerfile  build.rs
core/ledger/src/: grpc.rs  lib.rs  metrics.rs
deploy/secrets/: README.md  qazna.enc.yaml
dev_keys/: private.pem  public.pem
docs/: transparency.md
docs/adr/: 0001-b2g-strategy.md  0002-core-ledger-rust.md  0003-secret-management.md
docs/legal/: LICENSES.md  QAZNA_FEE_MODEL.md  QAZNA_PARTICIPATION_CHARTER.md
docs/roadmap/: 0001-initial-backlog.md
docs/tla/: README.md  ledger.cfg  ledger.tla
docs/ui/: dashboards.md
grafana/dashboards/: qazna-api.json
helm/qazna/: Chart.yaml  values.yaml
internal/ai/: task.go  verifier.go
internal/audit/: log.go  log_test.go
internal/auth/: auth.go  auth_test.go  authorize.go  authorize_test.go  context.go  errors.go  password.go  permissions.go  postgres.go  rbac.go  service.go  store.go  types.go
internal/httpapi/: auth_handlers.go  authn.go  authn_test.go  grpc_server.go  (+9 more)
ops/: prometheus.yml
prometheus/: prometheus.yml
scripts/: e2e_smoke.sh  grafana_reset_admin.sh  run_tlc.sh
sql/: 001_core.sql  002_rbac.sql  schema.sql
web/: index.html
(+2216 files in other folders)
