[package]
name = "qazna-ledger"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
publish = false
build = "build.rs"

[lib]
name = "qazna_ledger"
path = "src/lib.rs"

[[bin]]
name = "ledgerd"
path = "src/bin/ledgerd.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
ulid = { version = "1.3" }
prost = "0.12"
prost-types = "0.12"
tonic = { version = "0.11", features = ["transport"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
clap = { version = "4", features = ["derive"] }

[build-dependencies]
tonic-build = "0.11"
