[package]
name = "qazna-ledger"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
publish = false
build = "build.rs"

[lib]
name = "qazna_ledger"
path = "src/lib.rs"

[[bin]]
name = "ledgerd"
path = "src/bin/ledgerd.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
ulid = { version = "1.2" }
prost = "0.12"
prost-types = "0.12"
tonic = { version = "0.11", features = ["transport"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
prometheus = "0.13"
hyper = { version = "0.14", features = ["server", "tcp"] }

[build-dependencies]
tonic-build = "0.11"
protoc-bin-vendored = "3.2"

[dev-dependencies]
tempfile = "3.10"
